fixup on mobile

--- a/src/components/vote/VoteContent.module.scss
+++ b/src/components/vote/VoteContent.module.scss
@@ -23,10 +23,10 @@
     margin-left: -35%;
 
     @media (max-width: 768px) { // Phone
-        margin-top: 75%;
+        margin-top: 90%;
         margin-left: unset;
         width: 95%;
-        height: auto;
+        height: 50vh;
     }
 
 }
